Added Get method to userController
