# src/api/controllers/userController.js
@@ -10,13 +10,39 @@ const crypto = require('crypto');
 
 class userController {
     /**
+     * GET /user/{userCode} handler
+     * @param {Request} req
+     * @param {Response} res
+     */
+    static async getUser(req, res) {
+        const userCode = req.swagger.params.userCode.value;
+
+        requestHelper.log(req, userCode);
+
+        try {
+            const response = await userService.getUserByCode(userCode);
+            logger.debug({ type: 'MONGO', message: response });
+            if (response) {
+                responseHelper.ok(req, res, {
+                    userCode: response.userCode,
+                    email: response.email,
+                });
+            } else {
+                responseHelper.notFound(req, res, 'User not found');
+            }
+        } catch (error) {
+            logger.error({ type: 'ERROR', message: error.message });
+            responseHelper.error(req, res, 'Failed to obtain user');
+        }
+    }
+
+    /**
      * POST /user handler
      * @param  {Request}  req
      * @param  {Response}  res
      */
-    static async createUser(req, res) {
+    static async postUser(req, res) {
         const payload = swagger.parseEndpointPayload(req, 'user');
-        const app = req.applicationObject;
 
         requestHelper.log(req, payload);
 
@@ -35,15 +61,53 @@ class userController {
         };
 
         try {
-            await userService.createtUser(data);
+            const response = await userService.createtUser(data);
+            logger.debug({ type: 'MONGO', message: response })
             responseHelper.created(req, res);
         } catch (error) {
             logger.error({ type: 'ERROR', message: error.message });
             responseHelper.error(req, res, 'Failed to create user');
         }
     }
+
+    /**
+     * PUT /user/{userCode}
+     * @param  {Request} req
+     * @param  {Response} res
+     */
+    putUser(req, res) {
+        const userCode = req.swagger.params.userCode.value;
+
+        requestHelper.log(req, userCode);
+
+        try {
+
+        } catch (error) {
+            logger.error({ type: 'ERROR', message: error.message });
+            responseHelper.error(req, res, 'Failed to update user');
+        }
+    }
+
+    /**
+     * DELETE /user/{userCode}
+     * @param  {Request} req
+     * @param  {Response} res
+     */
+    deleteUser(req, res) {
+        const userCode = req.swagger.params.userCode.value;
+
+        requestHelper.log(req, userCode);
+
+        try {
+            
+        } catch (error) {
+            logger.error({ type: 'ERROR', message: error.message });
+            responseHelper.error(req, res, 'Failed to delete user');
+        }
+    }
 }
 
 module.exports = {
-    createUser: convertAsync(userController.createUser),
+    getUser: convertAsync(userController.getUser),
+    postUser: convertAsync(userController.postUser),
 };
