# src/api/services/userService.js
@@ -4,16 +4,33 @@ const User = require('../models/user');
  * Service for user data
  */
 class userService {
-    static async getUserById(userId) {
 
-    }
-
+    /**
+     * Get user from database
+     * @param  {string}  userCode
+     */
     static async getUserByCode(userCode) {
-
+        try {
+            return await User.findOne({ userCode });
+        } catch (error) {
+            throw error;
+        }
     }
 
     /**
-     * Insert user in database
+     * Get user from database
+     * @param  {string}  email
+     */
+    static async getUserByEmail(email) {
+        try {
+            return await User.findOne({ email });
+        } catch (error) {
+            throw error;
+        }
+    }
+
+    /**
+     * Create user in database
      * @param  {Object}  data
      */
     static async createtUser(data) {
@@ -25,12 +42,23 @@ class userService {
         }
     }
 
-    static async updateUser(userId, data) {
-
+    static async updateUser(userCode, data) {
+        try {
+            let user = await User.findOne({ userCode });
+            Object.assign(user, data);
+            console.log('user ', user);
+            return await user.save();
+        } catch (error) {
+            throw error;
+        }
     }
 
-    static async deleteUser(userId) {
-
+    static async deleteUser(userCode) {
+        try {
+            return User.remove({ userCode });
+        } catch (error) {
+            throw error;
+        }
     }
 }
 
